<resources>
    <string name="app_name"> ĐĂNG NHẬP </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_tiep_nhan_don_hang">TiepNhanDonHang_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>





    <string name="title_supervisor">Supervisor</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="order">Order</string>
    <string name="logout">Logout</string>
    <string name="empty_list_text">Empty</string>
    <string name="product_name">Product Name</string>
    <string name="product_cat">Product Cat</string>
    <string name="title_activity_create_product">CreateProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="action_search">action_search</string>
</resources>