<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/category" />
    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/product" />

    <item
        android:id="@+id/navigation_supervisor"
        android:icon="@drawable/ic_baseline_supervisor_account_24"
        android:title="@string/title_supervisor" />
    <item
        android:id="@+id/navigation_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/order" />
    <item
        android:id="@+id/navigation_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout" />

</menu>